# PlateCLI

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
notebooks/: train.ipynb
scripts/: augmentations.py  scrapper.py  train_val_split.py  yaml_generator.py
src/: main.py
src/features/: camera.py  exit.py  load_images.py
src/plate_cli/: app.py  cli.py  constants.py  main.py  models.py
src/plate_cli/features/: camera.py  exit.py  load_images.py
src/plate_cli/models/v1/: results.csv
src/plate_cli/utils/: constants.py  draw_box.py  error.py  menu.py  models.py  normalize.py  preprocess_image.py
src/plate_cli/utils/detections/: label.py  ocr.py
src/utils/: constants.py  error.py  menu.py  models.py  panel.py  prompt.py
src/utils/detections/: ocr.py
