[project]
name = "plate-cli"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "albumentations>=2.0.8",
    "easyocr>=1.7.2",
    "prompt-toolkit>=3.0.52",
    "rich>=14.3.1",
    "ruff>=0.14.14",
    "selenium>=4.40.0",
    "ultralytics>=8.4.8",
]

[dependency-groups]
dev = [
    "commitizen>=4.8.3",
    "pre-commit>=4.5.1",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true

[project.scripts]
plate-cli = "plate_cli.main:main"
